--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -26,4 +26,17 @@
 
 .btn--medium{
     padding: 8px 20px;
+    font-size: 20px;
+}
+
+.btn--large{
+    padding: 12px 26px;
+    font-size: 28px;
+}
+
+.btn--medium:hover,
+.btn--large:hover{
+    background: #fff;
+    color: #242424;
+    transition: all 0.3s ease-out;
 }
