--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -83,6 +83,7 @@
     .nav-menu {
       display: flex;
       flex-direction: column;
+      justify-content: flex-start;
       width: 100%;
       height: 90vh;
       position: absolute;
